# vision-camera

./: README.md  VISION_CONCEPT_PAGE.md  VISION_DECK_OUTLINE.md  VISION_ELEVATOR_PITCH.md
simulator/: PLAN.md  README.md  download_extras.py  download_models.py  pyproject.toml  test_app_debug.py  test_generate.py  vision-sim
simulator/config/: default.yaml
simulator/src/tests/: __init__.py  test_hardware.py
simulator/src/vision/: __init__.py  app.py
simulator/src/vision/camera/: __init__.py  capture.py
simulator/src/vision/hardware/: __init__.py  profiles.py  simulator.py
simulator/src/vision/inference/: __init__.py  engine.py  models.py  styles.py
simulator/src/vision/ui/: __init__.py  loading_screen.py  main_window.py  viewfinder.py
